fixed project-card tapping on iPhone, tabindex='-1' IS NEEDED

--- a/style.css
+++ b/style.css
@@ -511,7 +511,8 @@ footer {
 
 /*---------------------------------------------------------*/
 
-@media (hover: hover) {
+@media (hover: hover) and (pointer: fine) { /* 'pointer: fine' should make 
+	Samsung devices ignore this query, fixing the hover issue. */
     button:hover {
         opacity: 50%;
     }
